--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </div>
     <nav>
         <ul class="nav-links">
-            <li > <a class="nav-link"href="#">Specs</a> </li>
-            <li > <a class="nav-link"href="#">Products</a> </li>
-            <li > <a class="nav-link"href="#">Contact</a> </li>
+            <li > <a class="nav-link"href="index.html">Home</a> </li>
+            <li > <a class="nav-link"href="products.html">Products</a> </li>
+            <li > <a class="nav-link"href="about.html">Blog</a> </li>
         </ul>
     </nav>
     <div class="cart">
-        <img src="img/cart.svg" alt="">
+        <img src="img/logo.svg" alt="">
     </div>
 </header> 
 
@@ -40,7 +40,7 @@
         </div>
         <div class="cta">
             <button class="cta-select">14 inch</button>
-            <button class="cta-add">Add To Cart</button>
+            <button class="cta-add"> <a href="products.html">Specs</a></button>
         </div>
     </div>
     <div class="cover">
