--- a/blog.html
+++ b/blog.html
@@ -22,10 +22,10 @@
         <ul class="nav-links">
             <li > <a class="nav-link"href="index.html">Home</a> </li>
             <li > <a class="nav-link"href="products.html">Products</a> </li>
-            <li > <a class="nav-link"href="about.html">Blog</a> </li>
+            <li > <a class="nav-link"href="blog.html">Blog</a> </li>
         </ul>
     </nav>
-    <div class="cart">
+    <div class="logo-right">
         <img src="img/logo.svg" alt="">
     </div>
 </header> 
@@ -51,12 +51,14 @@
 
                     Most important, the entire category has thinned down in general. Whether you're looking at sliver-thin ultraportables, mainstream PCs, or even gaming machines, laptops of every flavor today are thinner, lighter, and better suited to life on the go. The best of these models will still cost you a pretty penny, particularly if you're looking for a business system that won't weigh you down when you travel for work, but they offer remarkable performance and often come with several high-end features as well. Touch screens (with 1080p resolution), full-size HDMI ports, and 8 or more hours of battery life are commonplace, and premium laptops (with premium prices) now come with high-resolution screens, up to 3,840-by-2,160 resolution (4K) at the top end.</p>
         </div>
-    
-  
-</div>
-
-
-       
+</div>    
+<footer>
+    <ul class="footer-links">
+        <li > <a href="https://www.facebook.com/" class="fa fa-facebook"></a> </li>
+        <li > <a href="https://www.youtube.com/" class="fa fa-youtube"></a> </li>
+        <li > <a href="https://www.instagram.com/?hl=hr" class="fa fa-instagram"></a> </li>
+    </ul>  
+</footer>  
 </main>
 
 
