--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link
 			href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap"
 			rel="stylesheet"
-		/>
+        />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Project1</title>
 </head>
 <body>
@@ -22,10 +23,10 @@
         <ul class="nav-links">
             <li > <a class="nav-link"href="index.html">Home</a> </li>
             <li > <a class="nav-link"href="products.html">Products</a> </li>
-            <li > <a class="nav-link"href="about.html">Blog</a> </li>
+            <li > <a class="nav-link"href="blog.html">Blog</a> </li>
         </ul>
     </nav>
-    <div class="cart">
+    <div class="logo-right">
         <img src="img/logo.svg" alt="">
     </div>
 </header> 
@@ -39,7 +40,7 @@
             <p>The new 14 inch display offering a 4k display with touch screen</p>
         </div>
         <div class="cta">
-            <button class="cta-select">14 inch</button>
+            <button class="cta-select"> <a href="blog.html">Blog</a></button>
             <button class="cta-add"> <a href="products.html">Specs</a></button>
         </div>
     </div>
@@ -49,13 +50,17 @@
 </section>
 
 <img class="big-circle" src="./img/big-eclipse.svg" alt="">
-
 <img class="small-circle" src="./img/small-eclipse.svg" alt="">
-
 
 </main>
 
-
+<footer>
+        <ul class="footer-links">
+            <li > <a href="https://www.facebook.com/" class="fa fa-facebook"></a> </li>
+            <li > <a href="https://www.youtube.com/" class="fa fa-youtube"></a> </li>
+            <li > <a href="https://www.instagram.com/?hl=hr" class="fa fa-instagram"></a> </li>
+        </ul>  
+</footer>
    
 </body>
 </html>
