--- a/products.html
+++ b/products.html
@@ -22,10 +22,10 @@
         <ul class="nav-links">
             <li > <a class="nav-link"href="index.html">Home</a> </li>
             <li > <a class="nav-link"href="products.html">Products</a> </li>
-            <li > <a class="nav-link"href="about.html">Blog</a> </li>
+            <li > <a class="nav-link"href="blog.html">Blog</a> </li>
         </ul>
     </nav>
-    <div class="cart">
+    <div class="logo-right">
         <img src="img/logo.svg" alt="">
     </div>
 </header> 
@@ -75,6 +75,12 @@
 <img class="black-circle" src="/img/black-circle.svg" alt="">
 <img class="black-circle-one" src="/img/black-circle.svg" alt="">
 <img class="black-circle-two" src="/img/black-circle.svg" alt="">
-   
+  
+<h1 class="location-text">Our Location</h1>
+<div id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2860.2239686115263!2d17.921212415385597!3d44.202453379106245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475ee2309bfe6b8b%3A0xae6c371e81ac545c!2sCrkvice%2C%20Zenica%2072000!5e0!3m2!1sbs!2sba!4v1570009126817!5m2!1sbs!2sba" width="1300px" height="500px" frameborder="0" style="border:0; margin:auto;" allowfullscreen=""></iframe>
+</div>
+
+
 </body>
 </html>
